# dominating_set

./: CMakeLists.txt  README.md  dom_set_main
benchmark/: bucket.csv  genetic.csv  heap.csv  milp.csv  prout.csv  sat.csv  test.csv  test_benchmark.csv  wgenetic.csv
data/: ds_p_1.graph  ds_p_1.graph_heap.sol  ds_p_2.graph  ds_p_2.graph_heap.sol  ds_p_3.graph  ds_p_3.graph_heap.sol  ds_p_4.graph  ds_p_4.graph_heap.sol  ds_p_5.graph  ds_p_5.graph_heap.sol  ds_p_6.graph  ds_p_6.graph_heap.sol  ds_p_7.graph  ds_p_7.graph_heap.sol  ds_p_8.graph  ds_p_8.graph_heap.sol  fvs_h_1.graph  fvs_h_1.graph_heap.sol  fvs_h_10.graph  fvs_h_10.graph_heap.sol  fvs_h_100.graph  fvs_h_100.graph_heap.sol  fvs_h_101.graph  fvs_h_101.graph_heap.sol  fvs_h_102.graph  fvs_h_102.graph_heap.sol  fvs_h_103.graph  fvs_h_103.graph_heap.sol  fvs_h_104.graph  fvs_h_104.graph_heap.sol  fvs_h_105.graph  fvs_h_105.graph_heap.sol  fvs_h_106.graph  fvs_h_106.graph_heap.sol  fvs_h_107.graph  fvs_h_107.graph_heap.sol  fvs_h_108.graph  fvs_h_108.graph_heap.sol  fvs_h_109.graph  fvs_h_109.graph_heap.sol  (+448 more)
data/project_instances/: 2.graph  3.graph  4.graph  5.graph  7.graph
include/Algo/: cp_sat.hpp  genetic.hpp  greedy.hpp  milp.hpp  sat.hpp
include/Graph/: graph.hpp
include/data_types/: binaryHeap.hpp  buckets.hpp  graph.hpp  output.hpp
local/: CMakeLists.txt
script/: change_files.py  display.py  run_benchmark.py
src/: CMakeLists.txt  benchmark.cpp  main.cpp
src/Algo/: CMakeLists.txt  cp_sat.cpp  genetic.cpp  greedy.cpp  milp.cpp  sat.cpp
src/Graph/: CMakeLists.txt  graph.cpp
src/data_types/: CMakeLists.txt  binaryHeap.cpp  buckets.cpp  graph.cpp  output.cpp
test/: .graph_test.cpp.swp  CMakeLists.txt  algo_test.cpp  data_types_test.cpp  graph_test.cpp  greedy_test.cpp
